<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppInfoActivity"
    android:background="@android:color/white"
    android:id="@+id/info_activity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@id/header"
        app:cardBackgroundColor="#DADADA"
        app:cardCornerRadius="20dp"
        android:id="@+id/app_details">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@mipmap/ic_launcher"
                android:layout_margin="20dp"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/app_icon"
                android:layout_alignTop="@id/app_icon"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/name"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textSize="25sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_alignStart="@id/name"
                android:layout_alignEnd="@id/name"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:text="Demo Version"
                android:id="@+id/app_version" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/header"
        android:text="@string/app_info_header"
        android:textSize="30sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:onClick="shareApp"
        android:id="@+id/share_button"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:layout_toStartOf="@id/share_button"
        android:src="@drawable/ic_baseline_share_24"
        android:onClick="shareApp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_details"
        android:layout_centerHorizontal="true"
        android:text="@string/developer_info"
        android:id="@+id/developer_details"
        android:textSize="20sp"
        android:textAlignment="center"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/developer_details"
        android:layout_marginTop="20dp"
        android:layout_above="@id/contact"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="#CCCCCC"
        android:layout_centerHorizontal="true"
        android:id="@+id/log_card">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/version_info"
            android:layout_marginTop="15dp"
            android:layout_above="@id/now"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/changelog"
                android:text="About App :-"
                android:textAlignment="textStart"
                android:textSize="22sp"/>
        </ScrollView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:id="@+id/contact"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:onClick="sendMail" />
</RelativeLayout>